@@ -1,3 +1,8 @@
+2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oraconf.rb: fix a problem to compile with a
+	   third-party x86_64 rpm package. '--with-instant-client'
+	   option become obsolete and is ignored.
+
 2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
 	    (suggested by Venkat Pa)
